ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/FI_Status__c.field-meta.xml
<CustomField>
    <fullName>FI_Status__c</fullName>
    <label>FI Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>