ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Finance_Free__c.field-meta.xml
<CustomField>
    <fullName>Finance_Free__c</fullName>
    <label>Finance Free</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>