ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Financier_Name__c.field-meta.xml
<CustomField>
    <fullName>Financier_Name__c</fullName>
    <label>Financier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>