ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/First_Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>First_Child_DOB__c</fullName>
    <label>First Child DOB</label>
    <type>Date</type>
</CustomField>