ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/First_Child_Gender__c.field-meta.xml
<CustomField>
    <fullName>First_Child_Gender__c</fullName>
    <label>First Child Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>