ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/First_Child_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Child_Name__c</fullName>
    <label>First Child Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>