ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MALE</fullName>
            </value>
            <value>
                <fullName>FEMALE</fullName>
            </value>
            <value>
                <fullName>TRANSGENDER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>