ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/GeoCoder_Latitude_and_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GeoCoder_Latitude_and_Longitude__c</fullName>
    <label>GeoCoder Latitude and Longitude</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>