ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/House_Type__c.field-meta.xml
<CustomField>
    <fullName>House_Type__c</fullName>
    <label>House Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PUCCA WITH RCC ROOF</fullName>
            </value>
            <value>
                <fullName>PUCCA WITHOUT RCC ROOF</fullName>
            </value>
            <value>
                <fullName>KACHHA HOUSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>