ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/HOW_HE_WILL_DEPLOY_THE_ASSET__c.field-meta.xml
<CustomField>
    <fullName>HOW_HE_WILL_DEPLOY_THE_ASSET__c</fullName>
    <label>HOW HE WILL DEPLOY THE ASSET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>