ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/how_long_he_is_residing_kyc_address__c.field-meta.xml
<CustomField>
    <fullName>how_long_he_is_residing_kyc_address__c</fullName>
    <label>how long he is residing kyc address</label>
    <type>TextArea</type>
</CustomField>