ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/How_many_members_in_the_Family__c.field-meta.xml
<CustomField>
    <fullName>How_many_members_in_the_Family__c</fullName>
    <label>How many members in the Family</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>