ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/How_much_margin_amount_paid_to_Dealer__c.field-meta.xml
<CustomField>
    <fullName>How_much_margin_amount_paid_to_Dealer__c</fullName>
    <label>How much margin amount paid to Dealer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>