ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/IBL_TFE_customer_borrower_count__c.field-meta.xml
<CustomField>
    <fullName>IBL_TFE_customer_borrower_count__c</fullName>
    <label>IBL TFE customer borrower count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>