ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/IF_EXCHANGE_OF_ASSET__c.field-meta.xml
<CustomField>
    <fullName>IF_EXCHANGE_OF_ASSET__c</fullName>
    <label>IF EXCHANGE OF ASSET</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>