ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/IF_NEGATIVE_THEN_REASON_FOR_NEGATIVE__c.field-meta.xml
<CustomField>
    <fullName>IF_NEGATIVE_THEN_REASON_FOR_NEGATIVE__c</fullName>
    <label>​​IF NEGATIVE THEN REASON FOR NEGATIVE</label>
    <type>TextArea</type>
</CustomField>