ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/If_the_source_of_margin_money_is_CASH__c.field-meta.xml
<CustomField>
    <fullName>If_the_source_of_margin_money_is_CASH__c</fullName>
    <label>If the source of margin money is CASH</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BORROWED FROM MARKET</fullName>
            </value>
            <value>
                <fullName>SOLD BY CROP</fullName>
            </value>
            <value>
                <fullName>SAVINGS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>