ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/IF_YES_ANY_IMPECT_OF_OUR_RECOVERY__c.field-meta.xml
<CustomField>
    <fullName>IF_YES_ANY_IMPECT_OF_OUR_RECOVERY__c</fullName>
    <label>IF YES ANY IMPACT OF OUR RECOVERY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>