ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/If_yes_provide_details_of_damage__c.field-meta.xml
<CustomField>
    <fullName>If_yes_provide_details_of_damage__c</fullName>
    <label>If yes provide details of damage</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>