ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/IN_LAST_5_YEARS_ANY_DRAUGHTFlood__c.field-meta.xml
<CustomField>
    <fullName>IN_LAST_5_YEARS_ANY_DRAUGHTFlood__c</fullName>
    <label>IN LAST 5 YEARS ANY DRAUGHTFlood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>