ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Income_as_per_FI_Visit__c.field-meta.xml
<CustomField>
    <fullName>Income_as_per_FI_Visit__c</fullName>
    <label>Income as per FI Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>