ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Income_per_month_property__c.field-meta.xml
<CustomField>
    <fullName>Income_per_month_property__c</fullName>
    <label>Income per month/property</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>