ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Inhouse_Security_Camera_present__c.field-meta.xml
<CustomField>
    <fullName>Inhouse_Security_Camera_present__c</fullName>
    <label>Inhouse Security Camera present</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>