ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Irrigation_system_present__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_system_present__c</fullName>
    <description>Please enter the value</description>
    <label>Irrigation system present?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>