ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/IS_CO_BORROWER_HAVE_ANY_POLITICAL_RELATI__c.field-meta.xml
<CustomField>
    <fullName>IS_CO_BORROWER_HAVE_ANY_POLITICAL_RELATI__c</fullName>
    <label>IS CO-BORROWER HAVE ANY POLITICAL RELATI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>