ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Is_CO_BORROWER_LIVING_WITH_BORROWER__c.field-meta.xml
<CustomField>
    <fullName>Is_CO_BORROWER_LIVING_WITH_BORROWER__c</fullName>
    <label>Is CO-BORROWER LIVING WITH BORROWER ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>