ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Is_coborrower_existing_customer__c.field-meta.xml
<CustomField>
    <fullName>Is_coborrower_existing_customer__c</fullName>
    <label>Is coborrower existing customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>