ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/IS_CUSTOMER_HAVING_IMPLEMENT__c.field-meta.xml
<CustomField>
    <fullName>IS_CUSTOMER_HAVING_IMPLEMENT__c</fullName>
    <label>IS CUSTOMER HAVING IMPLEMENT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>CULTIVATOR</fullName>
            </value>
            <value>
                <fullName>SEEDDRILL</fullName>
            </value>
            <value>
                <fullName>THRESHER</fullName>
            </value>
            <value>
                <fullName>HARROW</fullName>
            </value>
            <value>
                <fullName>ROTAVATOR</fullName>
            </value>
            <value>
                <fullName>PLOUGH</fullName>
            </value>
            <value>
                <fullName>LEVELLER</fullName>
            </value>
            <value>
                <fullName>TROLLEY</fullName>
            </value>
            <value>
                <fullName>LOADER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>