ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Is_Save__c.field-meta.xml
<CustomField>
    <fullName>Is_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Save</label>
    <type>Checkbox</type>
</CustomField>