ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/ITR_1__c.field-meta.xml
<CustomField>
    <fullName>ITR_1__c</fullName>
    <label>ITR 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>