ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/ITR_2__c.field-meta.xml
<CustomField>
    <fullName>ITR_2__c</fullName>
    <label>ITR 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>