ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Kcc_Details__c.field-meta.xml
<CustomField>
    <fullName>Kcc_Details__c</fullName>
    <label>Kcc Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>