ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/KYC_Location__c.field-meta.xml
<CustomField>
    <fullName>KYC_Location__c</fullName>
    <label>KYC Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>