ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Land_by_Borrower_in_Acres_with_proof__c.field-meta.xml
<CustomField>
    <fullName>Land_by_Borrower_in_Acres_with_proof__c</fullName>
    <label>Land by Borrower in Acres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>