ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Land_Irrigation_source__c.field-meta.xml
<CustomField>
    <fullName>Land_Irrigation_source__c</fullName>
    <label>Land Irrigation source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TUBEWELL/BOREWELL</fullName>
            </value>
            <value>
                <fullName>POND/DAM</fullName>
            </value>
            <value>
                <fullName>WELL</fullName>
            </value>
            <value>
                <fullName>CANAL</fullName>
            </value>
            <value>
                <fullName>RIVER</fullName>
            </value>
            <value>
                <fullName>DEPENDENT ON RAINS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>