ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Land_Photo__c.field-meta.xml
<CustomField>
    <fullName>Land_Photo__c</fullName>
    <label>Land Photo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>