ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Enter the landmark of your office address</description>
    <label>Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>