ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/LAST_5_YEARS_MAJOR_INVESTMENT__c.field-meta.xml
<CustomField>
    <fullName>LAST_5_YEARS_MAJOR_INVESTMENT__c</fullName>
    <label>LAST 5 YEARS MAJOR INVESTMENT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>