ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Latest_Electricity_Bill_Amount_Paid_Mont__c.field-meta.xml
<CustomField>
    <fullName>Latest_Electricity_Bill_Amount_Paid_Mont__c</fullName>
    <label>Latest Electricity Bill Amount Paid(Mon)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>