ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Latest_Telephone_Bill_Amount_Paid_Month__c.field-meta.xml
<CustomField>
    <fullName>Latest_Telephone_Bill_Amount_Paid_Month__c</fullName>
    <label>Latest Telephone Bill Amount Paid(Mon)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>