ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Latest_Water_Bill__c.field-meta.xml
<CustomField>
    <fullName>Latest_Water_Bill__c</fullName>
    <label>Latest Water Bill amount paid(Mon)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>