ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/List_of_equipment_tools_owned__c.field-meta.xml
<CustomField>
    <fullName>List_of_equipment_tools_owned__c</fullName>
    <label>List of equipment/tools owned</label>
    <length>200</length>
    <type>Text</type>
</CustomField>