ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/LOAN_TENURE__c.field-meta.xml
<CustomField>
    <fullName>LOAN_TENURE__c</fullName>
    <label>LOAN TENURE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>