ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Marriage_in_the_family_in_next_2_years__c.field-meta.xml
<CustomField>
    <fullName>Marriage_in_the_family_in_next_2_years__c</fullName>
    <label>Marriage in the family in next 2 years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>