ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Monthly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales__c</fullName>
    <description>Please enter the monthly sales amount</description>
    <label>Monthly Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>