ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Mother_DOB__c.field-meta.xml
<CustomField>
    <fullName>Mother_DOB__c</fullName>
    <label>Mother DOB</label>
    <type>Date</type>
</CustomField>