ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Name_of_Person_met__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Person_met__c</fullName>
    <label>Name of Person Met</label>
    <length>20</length>
    <type>Text</type>
</CustomField>