ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Nature_of_Business_Major_Industry__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business_Major_Industry__c</fullName>
    <label>Nature of Business - Major Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE</fullName>
            </value>
            <value>
                <fullName>COAL MINING</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION COMPANY</fullName>
            </value>
            <value>
                <fullName>DAIRY FARMING</fullName>
            </value>
            <value>
                <fullName>HOTEL AND RESTAURANT</fullName>
            </value>
            <value>
                <fullName>OFFICE CUM RESIDENCE</fullName>
            </value>
            <value>
                <fullName>POULTRY FARMING</fullName>
            </value>
            <value>
                <fullName>SAND QUARRYING</fullName>
            </value>
            <value>
                <fullName>SUGAR</fullName>
            </value>
            <value>
                <fullName>TRANSPORTER</fullName>
            </value>
            <value>
                <fullName>WATER SUPPLIER</fullName>
            </value>
            <value>
                <fullName>CONTRACTOR</fullName>
            </value>
            <value>
                <fullName>AQUACULTURE</fullName>
            </value>
            <value>
                <fullName>BRICKS</fullName>
            </value>
            <value>
                <fullName>RICE - MERCHANT/MILL</fullName>
            </value>
            <value>
                <fullName>BUSINESS- STONE - SUPPLIER</fullName>
            </value>
            <value>
                <fullName>MUNICIPAL - CORPORATION</fullName>
            </value>
            <value>
                <fullName>TIMBER</fullName>
            </value>
            <value>
                <fullName>HARDWARE SHOP - RETAIL</fullName>
            </value>
            <value>
                <fullName>Health and Social Work</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>