ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Nature_of_Business_Minor_Industry__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business_Minor_Industry__c</fullName>
    <label>Nature of Business - Minor Industry</label>
    <type>TextArea</type>
</CustomField>