ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/NEAR_BY_POLICE_STATION_NAME__c.field-meta.xml
<CustomField>
    <fullName>NEAR_BY_POLICE_STATION_NAME__c</fullName>
    <label>NEAR BY POLICE STATION NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>