ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/NEGATIVE_OR_CAUTION_Profile_details__c.field-meta.xml
<CustomField>
    <fullName>NEGATIVE_OR_CAUTION_Profile_details__c</fullName>
    <label>NEGATIVE OR CAUTION Profile details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>