ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/No_of_2_Wheelers__c.field-meta.xml
<CustomField>
    <fullName>No_of_2_Wheelers__c</fullName>
    <label>No of 2 Wheelers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Count_of_goods</valueSetName>
    </valueSet>
</CustomField>