ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/No_of_contracts_awarded_in_last_1_year__c.field-meta.xml
<CustomField>
    <fullName>No_of_contracts_awarded_in_last_1_year__c</fullName>
    <label>No of contracts awarded in last 1 year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>