ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/No_of_crops_per_annum__c.field-meta.xml
<CustomField>
    <fullName>No_of_crops_per_annum__c</fullName>
    <label>No of crops per annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>