ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/No_of_Service_Requests_catered_in_month__c.field-meta.xml
<CustomField>
    <fullName>No_of_Service_Requests_catered_in_month__c</fullName>
    <label>No of Service Requests catered in month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>