ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/No_of_TVs__c.field-meta.xml
<CustomField>
    <fullName>No_of_TVs__c</fullName>
    <description>Number of TVs</description>
    <label>No of TVs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>&gt;5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>