ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/No_of_vehicles_owned__c.field-meta.xml
<CustomField>
    <fullName>No_of_vehicles_owned__c</fullName>
    <label>No of vehicles owned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>