ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Non_Agri_Income__c.field-meta.xml
<CustomField>
    <fullName>Non_Agri_Income__c</fullName>
    <label>Non-Agri Income</label>
    <summarizedField>Non_Agri_Income__c.Total_Income__c</summarizedField>
    <summaryForeignKey>Non_Agri_Income__c.Field_Investigation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>