ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Number_of_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependent__c</fullName>
    <label>Number of Dependent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>&gt;5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>