ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Number_of_operational_hours_in_a_day__c.field-meta.xml
<CustomField>
    <fullName>Number_of_operational_hours_in_a_day__c</fullName>
    <label>Number of operational hours in a day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>