ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Number_of_Properties_rented__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Properties_rented__c</fullName>
    <label>Number of Properties rented</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>