ProdIND/ProdPrograms/force-app/main/default/objects/Field_Investigation__c/fields/Number_of_years_in_city_in_years__c.field-meta.xml
<CustomField>
    <fullName>Number_of_years_in_city_in_years__c</fullName>
    <label>Number of years in city(in years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>